Fixed some typos, added an useless button for showing the email.

--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -54,3 +54,12 @@ body {
   iframe{
     margin: 20px;
   }
+
+  button{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 50;
+    width:fit-content;
+    height:fit-content;
+    background-color: hotpink;
+    color: black;
+  }
